--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@hmscore/react-native-hms-location",
+  "name": "@devgeorep/react-native-hms-location",
   "title": "React Native HMS Location Kit",
   "description": "React Native HMS Location Kit",
-  "version": "6.4.0-300",
+  "version": "1.0.0",
   "main": "src/index.js",
   "repository": {
     "type": "git",
